	 to ignore counts, conditions or lifetime.
20080604 debugger/commandl.l: allow event strings to include numbers
         (necessary for if1 events to work...)
20080606 ui/widget/debugger.c: handle event breakpoints in display.
20080607 mempool.c: print error message if we couldn't initialise pools.
20080607 debugger/{breakpoint.c,breakpoint.h,commandl.l,commandy.y,
	 debugger_internals.h,event.c},memory.c,periph.c,ui/gtk/debugger.c:
	 add facility to run debugger commands when a breakpoint is hit.
20080608 debugger/{Makefile.am,commandl.l,commandy.y,debugger.c,
	 debugger_internals.h,expression.c}: add numeric debugger variables
20080608 debugger/debugger.c: a breakpoint command could have disabled the
	 debugger before the UI is brought up.
20080608 debugger/{breakpoint.c,debugger.c}: ensure the commands for all
	 breakpoints are run; also move previous fix.
20080609 debugger/variable.c: add forgotten file.
20080609 debugger/breakpoint.c: must copy expression when setting a
         breakpoint condition.
20080609 debugger/breakpoint.[ch],ui/gtk/debugger.c: multiple time breakpoints
         didn't work properly.
20080610 debugger/breakpoint.c: add <string.h> for string prototypes (Fred).
20080610 ui/widget/debugger.c: fix widget debugger for multiple time
         breakpoints (Fred).
20080610 debugger/commandl.l: much better to have COMMANDSTATE1 as an
         inclusive start condition.
20080610 ui/{fb/fbdisplay.c,sdl/sdldisplay.c,svga/svgadisplay.c,uidisplay.h,
         widget/{browse.c,debugger.c,error.c,filesel.c,menu.c,options.pl,
         pokefinder.c,query.c,roms.c,select.c,text.c,widget.[ch],
         widget_internals.h,xlib/xdisplay.c}: modify widget UI to have a
         Spectrum 128 style look and feel based on FuseX (Fred).
20080612 ui/widget/{widget_internals.h,widget.c,options.pl}: allow options
         dialogs to be navigated by cursor keys (Fred).
20080613 debugger/{expression.c,variable.c}: add <string.h> for string
         prototypes (Fred).